@@ -1,3 +1,6 @@
+[B]2.1.1[/B]
+- Fixed player links on main indexers
+
 [B]2.1.0[/B]
 - Added news item
 - Minor other tweaks
